# soluna-web

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  SOLUNA_STRATEGY_2040.md  admin-server.js  fly.toml  gen_images.py  generate_all.py  generate_batch.py  generate_bom_images.py  generate_corbusier.py  generate_minimum_images.py  generate_neuro_images.py  generate_renovations.py  generate_variants.py  next.config.js  nginx.conf  package-lock.json  package.json  server-package.json  server.js  tailwind.config.ts  today-summary.html  translate_pages.py  update_footers.py
.agent/: todo.md
app/: HomeClient.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  providers.tsx  sitemap.ts
cabin/: .dockerignore  404.html  BUILD_PLAN.md  Dockerfile  EMAIL_WELLCAMP.txt  PURCHASE_LIST.md  Soluna-mac.pkg  WELLCAMP_RFQ.md  WELLCAMP_RFQ_v2.md  activities.html  admin-audit.html  admin-secrets.html  admin-team.html  admin.html  agent.html  akiya.html  app.html  app.webmanifest  approve.html  arch-concepts.html  asago-akiya.html  ask.html  atami-manual.html  atami-story.html  atami.html  avail.html  bankei.html  bim-manifest.webmanifest  bim-sw.js  bim.html  biogrid.html  blog-1.html  blog-2.html  blog-3.html  blog-4.html  blog-5.html  blog-6.html  blog-7.html  blog-8.html  blog-9.html  (+279 more)
components/: GlobalNav.tsx  InnerFooter.tsx  MacShell.tsx  (+2 more)
neuro/: Cargo.toml  config.yaml  install.sh  justfile
neuro/src/: api.rs  automation.rs  cloud.rs  config.rs  guest.rs  kagi.rs  main.rs  music.rs  notify.rs  sensors.rs
neuro/static/: guest.html
(+426 files in other folders)
