[package]
name = "soluna-neuro"
version = "0.1.0"
edition = "2021"
description = "SOLUNA NEURO AI CABIN controller for Raspberry Pi 5"
authors = ["Yuki Hamada <mail@yukihamada.jp>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
rppal = { version = "0.19", features = ["hal"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
